# SimpleRipRouter

./: CMakeLists.txt  config.yaml
Example/: shell.cpp
HAL/: CMakeLists.txt
HAL/include/: router_hal.h  router_hal_common.h
HAL/src/linux/: router_hal.cpp
HAL/src/linux/platform/: testing.h
HAL/src/macOS/: router_hal.cpp
HAL/src/stdio/: router_hal.cpp
HAL/src/xilinx/: router_hal.c
Homework/boilerplate/: rip.h
Homework/checksum/: checksum.cpp
Homework/forwarding/: forwarding.cpp
Homework/lookup/: lookup.cpp  router.h
Homework/protocol/: protocol.cpp  rip.h
Router/: CMakeLists.txt  checksum.cpp  forwarding.cpp  lookup.cpp  main.cpp  protocol.cpp  rip.h  router.cpp  router.h
